--- a/index.html
+++ b/index.html
@@ -22,126 +22,136 @@
   </head>
   <body class="body">
     <header class="feader">
-      <a href="#" class="logo">Web<span class="accent">Studio</span></a>
-      <nav>
-        <ul class="list">
-          <li><a class="feader-nav-link" href="./index.html">Студія</a></li>
-          <li><a class="feader-nav-link" href="./portfolio.html">Портфоліо</a></li>
-          <li><a class="feader-nav-link" href="#">Контакти</a></li>
-        </ul>
-      </nav>
-      <a class="feader-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a class="feader-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+      <div class="container">
+        <a href="#" class="logo">Web<span class="accent">Studio</span></a>
+        <nav>
+          <ul class="list">
+            <li><a class="feader-nav-link" href="./index.html">Студія</a></li>
+            <li><a class="feader-nav-link" href="./portfolio.html">Портфоліо</a></li>
+            <li><a class="feader-nav-link" href="#">Контакти</a></li>
+          </ul>
+        </nav>
+        <a class="feader-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="feader-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+      </div>
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="hero-btn">Замовити послугу</button>
+        <div class="container">
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <button type="button" class="hero-btn">Замовити послугу</button>
+        </div>
       </section>
       <section class="features">
-        <ul class="list">
-          <li>
-            <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="features-text">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="features-text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">ПЛАНУВАННЯ</h3>
-            <p class="features-text">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="features-text">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
+        <div class="container">
+          <ul class="list list-features">
+            <li>
+              <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="features-text">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="features-text">
+                Завдання організації, особливо рамки і місце навчання кадрів тягне
+                у себе.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-title">ПЛАНУВАННЯ</h3>
+              <p class="features-text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="features-text">
+                Значимість цих проблем настільки очевидна, що реалізація планових
+                завдань.
+              </p>
+            </li>
         </ul>
+        </div>
       </section>
       <section class="doing">
-        <h2 class="doing-title">Чим ми займаємося</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/1.jpg"
-              width="370"
-              height="294"
-              alt="верстка сайту на планшеті"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/2.jpg"
-              width="370"
-              height="294"
-              alt="оптимізація дизайну під смартфон"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/3.jpg"
-              width="370"
-              height="294"
-              alt="графічний планшет з палітрою"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="doing-title">Чим ми займаємося</h2>
+          <ul class="list list-doing">
+            <li>
+              <img
+                src="./images/1.jpg"
+                width="370"
+                height="294"
+                alt="верстка сайту на планшеті"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/2.jpg"
+                width="370"
+                height="294"
+                alt="оптимізація дизайну під смартфон"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/3.jpg"
+                width="370"
+                height="294"
+                alt="графічний планшет з палітрою"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/comand1.jpg"
-              width="270"
-              height="260"
-              alt="фото працівника студії Ігоря Дем'яненка"
-            />
-            <h3 class="team-second-title">Ігор Дем'яненко</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/comand2.jpg"
-              width="270"
-              height="260"
-              alt="фото працівника студії Ольги Рєпіної"
-            />
-            <h3 class="team-second-title">Ольга Рєпіна</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/comand3.jpg"
-              width="270"
-              height="260"
-              alt="фото працівника студії Миколи Тарасова"
-            />
-            <h3 class="team-second-title">Микола Тарасов</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/comand4.jpg"
-              width="270"
-              height="260"
-              alt="фото працівника студії Михайло Єрмаков"
-            />
-            <h3 class="team-second-title">Михайло Єрмаков</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container container-team">
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="list">
+            <li>
+              <img
+                src="./images/comand1.jpg"
+                width="270"
+                height="260"
+                alt="фото працівника студії Ігоря Дем'яненка"
+              />
+              <h3 class="team-second-title">Ігор Дем'яненко</h3>
+              <p class="team-text">Product Designer</p>
+            </li>
+            <li>
+              <img
+                src="./images/comand2.jpg"
+                width="270"
+                height="260"
+                alt="фото працівника студії Ольги Рєпіної"
+              />
+              <h3 class="team-second-title">Ольга Рєпіна</h3>
+              <p class="team-text">Frontend Developer</p>
+            </li>
+            <li>
+              <img
+                src="./images/comand3.jpg"
+                width="270"
+                height="260"
+                alt="фото працівника студії Миколи Тарасова"
+              />
+              <h3 class="team-second-title">Микола Тарасов</h3>
+              <p class="team-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/comand4.jpg"
+                width="270"
+                height="260"
+                alt="фото працівника студії Михайло Єрмаков"
+              />
+              <h3 class="team-second-title">Михайло Єрмаков</h3>
+              <p class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>  
       </section>
     </main>
     <footer class="footer">
