--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <section class="team">
         <div class="container container-team">
           <h2 class="team-title">Наша команда</h2>
-          <ul class="list">
+          <ul class="list list-team">
             <li>
               <img
                 src="./images/comand1.jpg"
@@ -155,10 +155,12 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="#" class="footer-logo">Web<span class="accent-footer">Studio</span></a>
-      <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
-      <a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
+      <div class="container container-footer">
+        <a href="#" class="footer-logo">Web<span class="accent-footer">Studio</span></a>
+        <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
+        <a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
+      </div>
     </footer>
   </body>
 </html>
