--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body class="body">
     <header class="feader">
-      <div class="container">
+      <div class="container feader-conteiner">
         <a href="#" class="logo">Web<span class="accent">Studio</span></a>
         <nav>
           <ul class="list">
@@ -37,8 +37,8 @@
     </header>
     <main>
       <section class="hero">
-        <div class="container">
-          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <div class="container fero-container">
+          <h1 class="hero-title">Ефективні рішення для<br> вашого бізнесу</h1>
           <button type="button" class="hero-btn">Замовити послугу</button>
         </div>
       </section>
@@ -157,9 +157,17 @@
     <footer class="footer">
       <div class="container container-footer">
         <a href="#" class="footer-logo">Web<span class="accent-footer">Studio</span></a>
-        <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
-        <a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
+        <ul class="list ">
+          <li>
+            <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
+          </li>
+          <li>
+            <a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a class="footer-link end" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
