--- a/portfolio.html
+++ b/portfolio.html
@@ -22,24 +22,23 @@
   </head>
   <body class="body">
     <header class="feader">
-      <a href="#" class="logo">Web<span class="accent">Studio</span></a>
-      <nav>
-        <ul class="list">
-          <li><a class="feader-nav-link" href="./index.html">Студія</a></li>
-          <li>
-            <a class="feader-nav-link" href="./portfolio.html">Портфоліо</a>
-          </li>
-          <li><a class="feader-nav-link" href="#">Контакти</a></li>
-        </ul>
-      </nav>
-      <a class="feader-contact" href="mailto:info@devstudio.com"
-        >info@devstudio.com</a
-      >
-      <a class="feader-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+      <div class="container feader-conteiner">
+        <a href="#" class="logo">Web<span class="accent">Studio</span></a>
+        <nav>
+          <ul class="list">
+            <li><a class="feader-nav-link" href="./index.html">Студія</a></li>
+            <li><a class="feader-nav-link" href="./portfolio.html">Портфоліо</a></li>
+            <li><a class="feader-nav-link" href="#">Контакти</a></li>
+          </ul>
+        </nav>
+        <a class="feader-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="feader-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+      </div>
     </header>
     <main>
       <section class="portfolio">
-        <ul class="list">
+        <div class="container container-portfolio">
+        <ul class="list list-portfolio">
           <li><button class="portfolio-btn" type="button">Усі</button></li>
           <li>
             <button class="portfolio-btn" type="button">Веб-сайти</button>
@@ -51,7 +50,7 @@
           </li>
         </ul>
         <ul class="list portfolio-items">
-          <li>
+          <li class="list-items">
             <img
               src="./images/portfolio1.jpg"
               width="370"
@@ -61,7 +60,7 @@
             <h3 class="portfolio-title">Технокряк</h3>
             <p class="portfolio-text">Веб-сайт</p>
           </li>
-          <li>
+          <li class="list-items">
             <img
               src="./images/portfolio2.jpg"
               width="370"
@@ -71,7 +70,7 @@
             <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
             <p class="portfolio-text">Дизайн</p>
           </li>
-          <li>
+          <li class="list-items">
             <img
               src="./images/portfolio3.jpg"
               width="370"
@@ -80,8 +79,8 @@
             />
             <h3 class="portfolio-title">Ресторан Seafood</h3>
             <p class="portfolio-text">Додаток</p>
-          </li>
-          <li>
+          </li class="list-items">
+          <li class="list-items">
             <img
               src="./images/portfolio4.jpg"
               width="370"
@@ -91,7 +90,7 @@
             <h3 class="portfolio-title">Проєкт Prime</h3>
             <p class="portfolio-text">Маркетинг</p>
           </li>
-          <li>
+          <li class="list-items">
             <img
               src="./images/portfolio5.jpg"
               width="370"
@@ -101,7 +100,7 @@
             <h3 class="portfolio-title">Проєкт Boxes</h3>
             <p class="portfolio-text">Веб-сайт</p>
           </li>
-          <li>
+          <li class="list-items">
             <img
               src="./images/portfolio6.jpg"
               width="370"
@@ -111,7 +110,7 @@
             <h3 class="portfolio-title">Inspiration has no Borders</h3>
             <p class="portfolio-text">Веб-сайт</p>
           </li>
-          <li>
+          <li class="list-items">
             <img
               src="./images/portfolio7.jpg"
               width="370"
@@ -121,7 +120,7 @@
             <h3 class="portfolio-title">Видання Limited Edition</h3>
             <p class="portfolio-text">Дизайн</p>
           </li>
-          <li>
+          <li class="list-items">
             <img
               src="./images/portfolio8.jpg"
               width="370"
@@ -131,7 +130,7 @@
             <h3 class="portfolio-title">Проєкт LAB</h3>
             <p class="portfolio-text">Маркетинг</p>
           </li>
-          <li>
+          <li class="list-items">
             <img
               src="./images/portfolio9.jpg"
               width="370"
@@ -142,17 +141,24 @@
             <p class="portfolio-text">Додаток</p>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="#" class="footer-logo"
-        >Web<span class="accent-footer">Studio</span></a
-      >
-      <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
-      <a class="footer-link" href="mailto:info@devstudio.com"
-        >info@devstudio.com</a
-      >
-      <a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
+      <div class="container container-footer">
+        <a href="#" class="footer-logo">Web<span class="accent-footer">Studio</span></a>
+        <ul class="list ">
+          <li>
+            <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
+          </li>
+          <li>
+            <a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a class="footer-link end" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
