--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
     <header class="feader">
       <div class="container feader-conteiner">
         <a href="#" class="logo">Web<span class="accent">Studio</span></a>
-        <nav>
-          <ul class="list">
+        <nav class="feader-conteiner list-feader">
+          <ul class="list list-feader">
             <li><a class="feader-nav-link" href="./index.html">Студія</a></li>
             <li><a class="feader-nav-link" href="./portfolio.html">Портфоліо</a></li>
-            <li><a class="feader-nav-link" href="#">Контакти</a></li>
+            <li><a class="feader-nav-link nav-end" href="#">Контакти</a></li>
           </ul>
         </nav>
         <a class="feader-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="feader-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+        <a class="feader-contact contact-end" href="tel:+380961111111">+38 096 111 11 11</a>
       </div>
     </header>
     <main>
@@ -45,27 +45,27 @@
       <section class="features">
         <div class="container">
           <ul class="list list-features">
-            <li>
+            <li class="features-items">
               <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="features-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li>
+            <li class="features-items">
               <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="features-text">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне
                 у себе.
               </p>
             </li>
-            <li>
+            <li class="features-items">
               <h3 class="features-title">ПЛАНУВАННЯ</h3>
               <p class="features-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li>
+            <li class="features-items">
               <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="features-text">
                 Значимість цих проблем настільки очевидна, що реалізація планових
@@ -79,7 +79,7 @@
         <div class="container">
           <h2 class="doing-title">Чим ми займаємося</h2>
           <ul class="list list-doing">
-            <li>
+            <li class="doing-items">
               <img
                 src="./images/1.jpg"
                 width="370"
@@ -87,7 +87,7 @@
                 alt="верстка сайту на планшеті"
               />
             </li>
-            <li>
+            <li class="doing-items">
               <img
                 src="./images/2.jpg"
                 width="370"
@@ -95,7 +95,7 @@
                 alt="оптимізація дизайну під смартфон"
               />
             </li>
-            <li>
+            <li class="doing-items">
               <img
                 src="./images/3.jpg"
                 width="370"
@@ -110,7 +110,7 @@
         <div class="container container-team">
           <h2 class="team-title">Наша команда</h2>
           <ul class="list list-team">
-            <li>
+            <li class="team-items">
               <img
                 src="./images/comand1.jpg"
                 width="270"
@@ -120,7 +120,7 @@
               <h3 class="team-second-title">Ігор Дем'яненко</h3>
               <p class="team-text">Product Designer</p>
             </li>
-            <li>
+            <li class="team-items">
               <img
                 src="./images/comand2.jpg"
                 width="270"
@@ -130,7 +130,7 @@
               <h3 class="team-second-title">Ольга Рєпіна</h3>
               <p class="team-text">Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-items">
               <img
                 src="./images/comand3.jpg"
                 width="270"
@@ -140,7 +140,7 @@
               <h3 class="team-second-title">Микола Тарасов</h3>
               <p class="team-text">Marketing</p>
             </li>
-            <li>
+            <li class="team-items">
               <img
                 src="./images/comand4.jpg"
                 width="270"
@@ -157,7 +157,7 @@
     <footer class="footer">
       <div class="container container-footer">
         <a href="#" class="footer-logo">Web<span class="accent-footer">Studio</span></a>
-        <ul class="list ">
+        <ul class="list list-footer">
           <li>
             <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
           </li>
