--- a/portfolio.html
+++ b/portfolio.html
@@ -24,15 +24,15 @@
     <header class="feader">
       <div class="container feader-conteiner">
         <a href="#" class="logo">Web<span class="accent">Studio</span></a>
-        <nav>
-          <ul class="list">
+        <nav class="feader-conteiner list-feader">
+          <ul class="list list-feader">
             <li><a class="feader-nav-link" href="./index.html">Студія</a></li>
             <li><a class="feader-nav-link" href="./portfolio.html">Портфоліо</a></li>
-            <li><a class="feader-nav-link" href="#">Контакти</a></li>
+            <li><a class="feader-nav-link nav-end" href="#">Контакти</a></li>
           </ul>
         </nav>
         <a class="feader-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="feader-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+        <a class="feader-contact contact-end" href="tel:+380961111111">+38 096 111 11 11</a>
       </div>
     </header>
     <main>
@@ -147,7 +147,7 @@
     <footer class="footer">
       <div class="container container-footer">
         <a href="#" class="footer-logo">Web<span class="accent-footer">Studio</span></a>
-        <ul class="list ">
+        <ul class="list list-footer">
           <li>
             <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
           </li>
