--- a/index.html
+++ b/index.html
@@ -27,18 +27,27 @@
         <nav class="feader-conteiner list-feader">
           <ul class="list list-feader">
             <li><a class="feader-nav-link" href="./index.html">Студія</a></li>
-            <li><a class="feader-nav-link" href="./portfolio.html">Портфоліо</a></li>
+            <li>
+              <a class="feader-nav-link" href="./portfolio.html">Портфоліо</a>
+            </li>
             <li><a class="feader-nav-link nav-end" href="#">Контакти</a></li>
           </ul>
         </nav>
-        <a class="feader-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="feader-contact contact-end" href="tel:+380961111111">+38 096 111 11 11</a>
+        <a class="feader-contact" href="mailto:info@devstudio.com"
+          >info@devstudio.com</a
+        >
+        <a class="feader-contact contact-end" href="tel:+380961111111"
+          >+38 096 111 11 11</a
+        >
       </div>
     </header>
     <main>
       <section class="hero">
         <div class="container fero-container">
-          <h1 class="hero-title">Ефективні рішення для<br> вашого бізнесу</h1>
+          <h1 class="hero-title">
+            Ефективні рішення для<br />
+            вашого бізнесу
+          </h1>
           <button type="button" class="hero-btn">Замовити послугу</button>
         </div>
       </section>
@@ -55,8 +64,8 @@
             <li class="features-items">
               <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="features-text">
-                Завдання організації, особливо рамки і місце навчання кадрів тягне
-                у себе.
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
               </p>
             </li>
             <li class="features-items">
@@ -68,11 +77,11 @@
             <li class="features-items">
               <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="features-text">
-                Значимість цих проблем настільки очевидна, що реалізація планових
-                завдань.
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
               </p>
             </li>
-        </ul>
+          </ul>
         </div>
       </section>
       <section class="doing">
@@ -151,21 +160,29 @@
               <p class="team-text">UI Designer</p>
             </li>
           </ul>
-        </div>  
+        </div>
       </section>
     </main>
     <footer class="footer">
       <div class="container container-footer">
-        <a href="#" class="footer-logo">Web<span class="accent-footer">Studio</span></a>
+        <a href="#" class="footer-logo"
+          >Web<span class="accent-footer">Studio</span></a
+        >
         <ul class="list list-footer">
           <li>
-            <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
+            <address class="footer-address">
+              м. Київ, пр-т Лесі Українки, 26
+            </address>
           </li>
           <li>
-            <a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="footer-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a class="footer-link end" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="footer-link end" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
