--- a/portfolio.html
+++ b/portfolio.html
@@ -26,26 +26,32 @@
         <a href="#" class="logo">Web<span class="accent">Studio</span></a>
         <nav class="feader-conteiner list-feader">
           <ul class="list list-feader">
-            <li><a class="feader-nav-link" href="./index.html">Студія</a></li>
-            <li><a class="feader-nav-link" href="./portfolio.html">Портфоліо</a></li>
-            <li><a class="feader-nav-link nav-end" href="#">Контакти</a></li>
+            <li class="feader-nav"><a class="feader-nav-link" href="./index.html">Студія</a></li>
+            <li class="feader-nav">
+              <a class="feader-nav-link" href="./portfolio.html">Портфоліо</a>
+            </li>
+            <li class="feader-nav"><a class="feader-nav-link nav-end" href="#">Контакти</a></li>
           </ul>
         </nav>
-        <a class="feader-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="feader-contact contact-end" href="tel:+380961111111">+38 096 111 11 11</a>
+        <a class="feader-contact" href="mailto:info@devstudio.com"
+          >info@devstudio.com</a
+        >
+        <a class="feader-contact contact-end" href="tel:+380961111111"
+          >+38 096 111 11 11</a
+        >
       </div>
     </header>
     <main>
       <section class="portfolio">
         <div class="container container-portfolio">
         <ul class="list list-portfolio">
-          <li><button class="portfolio-btn" type="button">Усі</button></li>
-          <li>
+          <li class="portfolio-nv"><button class="portfolio-btn" type="button">Усі</button></li>
+          <li class="portfolio-nv">
             <button class="portfolio-btn" type="button">Веб-сайти</button>
           </li>
-          <li><button class="portfolio-btn" type="button">Додатки</button></li>
-          <li><button class="portfolio-btn" type="button">Дизайн</button></li>
-          <li>
+          <li class="portfolio-nv"><button class="portfolio-btn" type="button">Додатки</button></li>
+          <li class="portfolio-nv"><button class="portfolio-btn" type="button">Дизайн</button></li>
+          <li class="portfolio-nv">
             <button class="portfolio-btn" type="button">Маркетинг</button>
           </li>
         </ul>
@@ -57,8 +63,10 @@
               height="294"
               alt="відкритий ноутбук"
             />
-            <h3 class="portfolio-title">Технокряк</h3>
-            <p class="portfolio-text">Веб-сайт</p>
+            <div class="portfolio-info">
+              <h3 class="portfolio-title">Технокряк</h3>
+              <p class="portfolio-text">Веб-сайт</p>
+            </div>
           </li>
           <li class="list-items">
             <img
@@ -67,8 +75,10 @@
               height="294"
               alt="два боскетболісти з мячем"
             />
-            <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
-            <p class="portfolio-text">Дизайн</p>
+            <div class="portfolio-info">
+              <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
+              <p class="portfolio-text">Дизайн</p>
+            </div>
           </li>
           <li class="list-items">
             <img
@@ -77,8 +87,10 @@
               height="294"
               alt="логотип з рибою"
             />
-            <h3 class="portfolio-title">Ресторан Seafood</h3>
-            <p class="portfolio-text">Додаток</p>
+            <div class="portfolio-info">
+              <h3 class="portfolio-title">Ресторан Seafood</h3>
+              <p class="portfolio-text">Додаток</p>
+            </div>
           </li class="list-items">
           <li class="list-items">
             <img
@@ -87,8 +99,10 @@
               height="294"
               alt="навушники повнорозміні"
             />
-            <h3 class="portfolio-title">Проєкт Prime</h3>
-            <p class="portfolio-text">Маркетинг</p>
+            <div class="portfolio-info">
+              <h3 class="portfolio-title">Проєкт Prime</h3>
+              <p class="portfolio-text">Маркетинг</p>
+            </div>
           </li>
           <li class="list-items">
             <img
@@ -97,8 +111,10 @@
               height="294"
               alt="дві коробки"
             />
-            <h3 class="portfolio-title">Проєкт Boxes</h3>
-            <p class="portfolio-text">Веб-сайт</p>
+            <div class="portfolio-info">
+              <h3 class="portfolio-title">Проєкт Boxes</h3>
+              <p class="portfolio-text">Веб-сайт</p>
+            </div>
           </li>
           <li class="list-items">
             <img
@@ -107,8 +123,10 @@
               height="294"
               alt="компьютер"
             />
-            <h3 class="portfolio-title">Inspiration has no Borders</h3>
-            <p class="portfolio-text">Веб-сайт</p>
+            <div class="portfolio-info">
+              <h3 class="portfolio-title">Inspiration has no Borders</h3>
+              <p class="portfolio-text">Веб-сайт</p>
+            </div>
           </li>
           <li class="list-items">
             <img
@@ -117,8 +135,10 @@
               height="294"
               alt="розкрита книга"
             />
-            <h3 class="portfolio-title">Видання Limited Edition</h3>
-            <p class="portfolio-text">Дизайн</p>
+            <div class="portfolio-info">
+              <h3 class="portfolio-title">Видання Limited Edition</h3>
+              <p class="portfolio-text">Дизайн</p>
+            </div>
           </li>
           <li class="list-items">
             <img
@@ -127,8 +147,10 @@
               height="294"
               alt="бірка"
             />
-            <h3 class="portfolio-title">Проєкт LAB</h3>
-            <p class="portfolio-text">Маркетинг</p>
+            <div class="portfolio-info">
+              <h3 class="portfolio-title">Проєкт LAB</h3>
+              <p class="portfolio-text">Маркетинг</p>
+            </div>
           </li>
           <li class="list-items">
             <img
@@ -137,8 +159,10 @@
               height="294"
               alt="людина працює за ноутбуком"
             />
-            <h3 class="portfolio-title">Growing Business</h3>
-            <p class="portfolio-text">Додаток</p>
+            <div class="portfolio-info">
+              <h3 class="portfolio-title">Growing Business</h3>
+              <p class="portfolio-text">Додаток</p>
+            </div>
           </li>
         </ul>
       </div>
@@ -146,16 +170,24 @@
     </main>
     <footer class="footer">
       <div class="container container-footer">
-        <a href="#" class="footer-logo">Web<span class="accent-footer">Studio</span></a>
+        <a href="#" class="footer-logo"
+          >Web<span class="accent-footer">Studio</span></a
+        >
         <ul class="list list-footer">
-          <li>
-            <address class="footer-address">м. Київ, пр-т Лесі Українки, 26</address>
+          <li class="list-info">
+            <address class="footer-address">
+              м. Київ, пр-т Лесі Українки, 26
+            </address>
           </li>
-          <li>
-            <a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <li class="list-info">
+            <a class="footer-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li>
-            <a class="footer-link end" href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="list-info">
+            <a class="footer-link end" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
